# json2run

./: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis.R  j2r  j2ranalyze  setup.cfg  setup.py
json2run/: __init__.py  batch.py  experiment.py  j2r.py  parameter.py  parameterexpression.py  persistent.py  postprocessor.py
test/: exec.py  experiments.json  test.json  test_task  test_verify.py
utils/: commandr  comparison.R  loadcomp.py
