[metadata]
name = json2run
version = attr: json2run.VERSION
description = A tool to launch experiments.
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = validator, translator
license = MIT

[options]
zip_safe = True
packages = find:
install_requires =
    pymongo>=3
    scipy
    numpy
    pandas
    argcomplete
python_requires = >=3.6

[options.extras_require]
analyze = rpy2

[options.entry_points]
console_scripts = 
    j2r = json2run:main
#[options.scripts]
#    j2ranalyze = j2ranalyze.sh